user posts are displayed correctly in the respective tabs

--- a/Blog/templates/Blog/user_posts.html
+++ b/Blog/templates/Blog/user_posts.html
@@ -1,39 +1,46 @@
 {% extends 'Blog/base.html' %}
 {% load extra_auth %}
 {% block content %}
-{% if page_obj.paginator.count %}
-    <h3 class="mb-3">Total Posts ({{ page_obj.paginator.count }})</h3>
-    <ul class="nav nav-pills nav-justified" id="postTab" role="tablist">
-        <li class="nav-item">
-            <a class="nav-link" id="draft-tab" data-toggle="pill" data-url="{% url 'Blog:my-posts' user 'draft' %}" role="tab" aria-controls="draft" aria-selected="false" title="Posts under the draft section">Draft</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" id="queued-tab" data-toggle="pill" data-url="{% url 'Blog:my-posts' user 'queued' %}" role="tab" aria-controls="queued" aria-selected="false" title="Posts queued for publishing">Queued</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" id="published-tab" data-toggle="pill" data-url="{% url 'Blog:my-posts' user 'published' %}") role="tab" aria-controls="published" aria-selected="false" title="Posts published">Published</a>
-        </li>
-    </ul>
-    <div class="tab-content list-group-item list-group-item-light">
-        <li id="draft" class="tab-pane fade" role="tabpanel" aria-labelledby="draft-tab">
-            {% include "Blog/draft_post_list.html" %}
-            {% include "paginate.html" %}
-        </li>
-        <li id="queued" class="tab-pane fade" role="tabpanel" aria-labelledby="queued-tab">
-            {% include "Blog/draft_post_list.html" %}
-            {% include "paginate.html" %}
-        </li>
-        <li id="published" class="tab-pane fade" role="tabpanel" aria-labelledby="published-tab">
-            {% include "post_list_home.html" %}
-            {% include "paginate.html" %}
-        </li>
-    </div>
-{% else %}
-{% comment %} Currently, this information is shown only to editors/staff {% endcomment %}
-{% if user|has_group:"editor" %}
-<h5 class="mt-5">There are no posts here.{% if author == user %}Try writing some <a class="" href="{% url 'Blog:post-create' %}" title="Write a Post">Posts</a>{% endif %}</h5>
-{% endif %}
-{% endif %}
+<ul class="nav nav-pills nav-justified" id="postTab" role="tablist">
+    <li class="nav-item">
+        <a class="nav-link" id="draft-tab" data-toggle="pill" data-url="{% url 'Blog:my-posts' user 'draft' %}" role="tab" aria-controls="draft" aria-selected="false" title="Posts under the draft section">Draft</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" id="queued-tab" data-toggle="pill" data-url="{% url 'Blog:my-posts' user 'queued' %}" role="tab" aria-controls="queued" aria-selected="false" title="Posts queued for publishing">Queued</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" id="published-tab" data-toggle="pill" data-url="{% url 'Blog:my-posts' user 'published' %}") role="tab" aria-controls="published" aria-selected="false" title="Posts published">Published</a>
+    </li>
+</ul>
+<div class="tab-content list-group-item list-group-item-light">
+    <li id="draft" class="tab-pane fade" role="tabpanel" aria-labelledby="draft-tab">
+        {% if page_obj.paginator.count %}
+        <h3 class="mb-3">Total Posts ({{ page_obj.paginator.count }})</h3>
+        {% include "Blog/draft_post_list.html" %}
+        {% include "paginate.html" %}
+        {% else %}
+        <h5 class="mt-5">There are no posts here.</h5>
+        {% endif %}
+    </li>
+    <li id="queued" class="tab-pane fade" role="tabpanel" aria-labelledby="queued-tab">
+        {% if page_obj.paginator.count %}
+        <h3 class="mb-3">Total Posts ({{ page_obj.paginator.count }})</h3>
+        {% include "Blog/draft_post_list.html" %}
+        {% include "paginate.html" %}
+        {% else %}
+        <h5 class="mt-5">There are no posts here.</h5>
+        {% endif %}
+    </li>
+    <li id="published" class="tab-pane fade" role="tabpanel" aria-labelledby="published-tab">
+        {% if page_obj.paginator.count %}
+        <h3 class="mb-3">Total Posts ({{ page_obj.paginator.count }})</h3>
+        {% include "post_list_home.html" %}
+        {% include "paginate.html" %}
+        {% else %}
+        <h5 class="mt-5">There are no posts here.</h5>
+        {% endif %}
+    </li>
+</div>
 {% endblock content %}
 {% block extrabottom %}
 <script>
@@ -42,12 +49,15 @@ $(document).ready(function(){
     const lastPath = paths[paths.length-1];
     if (lastPath === "queued"){
         $('#queued-tab').addClass('active');
+        $('#queued').addClass('show active');
     }else{
         if(lastPath === "published"){
             $('#published-tab').addClass('active');
+            $('#published').addClass('show active');
         }
         else{
             $('#draft-tab').addClass('active');
+            $('#draft').addClass('show active');
         }
     }
     $('#postTab a').click(function(e) {
