Changed decorator for preview function --> since it is a function based view - css file changed to use the pointer cursor on nav-tabs of user's posts - added semicolon to a js line

--- a/Blog/templates/Blog/user_posts.html
+++ b/Blog/templates/Blog/user_posts.html
@@ -64,7 +64,7 @@ $(document).ready(function(){
     e.preventDefault();
     const tab = $(this).id;
     const url = $(this).data('url');
-    window.location.replace(url)
+    window.location.replace(url);
     });
 });
 </script>
