--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -864,6 +864,13 @@ a.article-title:hover {
     margin: 0 auto;
 }
 
+
+/* user for nav-tabs on the user's posts page */
+
+a:not([href]):not([tabindex]) {
+    cursor: pointer;
+}
+
 @media(max-width:600px) {
     #main {
         margin: 1rem;
