Add option to show exceptions

--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -113,6 +113,9 @@
                             </div>
                             {% endfor %}
                         {% endif %}
+                        {% if exception %}
+                        <p>{{ exception }}</p>
+                        {% endif %}                        
                         <div id="response">
                         </div>
                         {% block content %}
