--- a/Blog/templates/Blog/post_preview.html
+++ b/Blog/templates/Blog/post_preview.html
@@ -48,8 +48,11 @@
 <form method="post">
     {% csrf_token %}
     <div class="form-group">
-        {% comment %} <a class="btn btn-info" href="{% url 'Blog:post-update' post.date_published.year post.date_published.month post.date_published.day post.slug %}" title="Get back to edit">Get back to edit</a> {% endcomment %}
+        {% if user.is_superuser %}
+        <button class="btn btn-info ml-auto mr-auto" style="display:block;" type="submit">Publish</button>
+        {% else %}
         <button class="btn btn-info ml-auto mr-auto" style="display:block;" type="submit">Submit for review</button>
+        {% endif %}
     </div>
 </form>
 {% endblock content %}
