--- a/Blog/templates/Blog/post_form.html
+++ b/Blog/templates/Blog/post_form.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="content-section">
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Blog Post</legend>
@@ -11,7 +11,7 @@
         </fieldset>
         <div class="form-group">
             {% if request.resolver_match.url_name == 'post-update' %}
-            <button id="draft" class="btn btn-outline-info ml-2 mr-2" name="draft" value="Save" type="submit">Move to Draft</button>            
+            <button id="draft" class="btn btn-outline-info ml-2 mr-2" name="draft" value="Draft" type="submit">Move to Draft</button>            
             <button id="preview" class="btn btn-outline-info ml-2 mr-1" name="preview" value="Preview" type="submit">Preview</button>            
             {% if user.is_superuser %}
             <button id="publish" class="btn btn-outline-info ml-2 mr-2" name="publish" value="Publish" type="submit">Publish</button>            
