--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -34,6 +34,10 @@ h6 {
     font-family: 'Lato';
 }
 
+img {
+    max-width: 100%;
+}
+
 ul {
     margin: 0;
 }
@@ -125,6 +129,10 @@ a.dropdown-toggle {
 #main {
     margin: 1rem;
     padding: 0.5rem;
+}
+
+#sidebar {
+    height: max-content;
 }
 
 .list-group-item.active {
