--- a/Blog/templates/tags.html
+++ b/Blog/templates/tags.html
@@ -4,5 +4,5 @@
 {% endfor %}
 </span>
 {% if ajax %}
-    <a class="btn-primary btn-sm" href="{% url 'Blog:all-tags' %}" title="View all tags">View More</a>
+    <a class="btn btn-outline-primary btn-sm" href="{% url 'Blog:all-tags' %}" title="View all tags">View More</a>
 {% endif %}
