reduce padding for list items in article-content

--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -740,7 +740,7 @@ a.article-title:hover {
     /* IE7: reset rtl list margin. (#7334) */
     *margin-right: 0px;
     /* Preserved spaces for list items with text direction different than the list. (#6249,#8049)*/
-    padding: 0 40px;
+    padding: 0 1.2rem;
 }
 
 
