corrected link for the category coding

--- a/Blog/templates/Blog/about.html
+++ b/Blog/templates/Blog/about.html
@@ -8,7 +8,7 @@
     <p>
         <a href="{% url 'Blog:home' %}" title="HackAdda Home">HackAdda</a> is an online blog that aims to increase the technical awareness around the world. We bring you the latest developments in the field of
          {% comment %} <a href="{% url 'Blog:categorised' 'science'%}" title="Article under the category Science">Science</a>, {% endcomment %}
-         <a href="{% url 'Blog:categorised' 'programming'%}" title="Article under the category Programming">Programming</a>,
+         <a href="{% url 'Blog:categorised' 'coding'%}" title="Article under the category Coding">Coding</a>,
          <a href="{% url 'Blog:categorised' 'robotics'%}" title="Article under the category Robotics">Robotics</a>,
          <a href="{% url 'Blog:categorised' 'artificial-intelligence'%}" title="Article under the category Artificial Intelligence">Artificial Intelligence</a>,
          {% comment %} <a href="{% url 'Blog:categorised' 'augumented-reality'%}" title="Article under the category Augumented Reality">Augmented Reality</a>,  {% endcomment %}
