--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -46,6 +46,19 @@ pre {
     margin-top: 1rem;
 }
 
+/* handles table on both small and large devices. */
+table {
+    margin-bottom: 1rem;
+    background-color: transparent;
+    width: auto;
+    overflow-x: auto;
+    display: inline-block;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+    /* max-width: 100%; */
+}
+
 .fa-heart {
     color: red;
 }
