Override bootstrap property with relevant one

--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -50,7 +50,8 @@ pre {
 table {
     margin-bottom: 1rem;
     background-color: transparent;
-    width: auto;
+    width: auto !important; 
+    /* to override bootstrap property */
     overflow-x: auto;
     display: inline-block;
     position: relative;
