--- a/Blog/templates/Blog/post_detail.html
+++ b/Blog/templates/Blog/post_detail.html
@@ -4,9 +4,7 @@
 {% load extra_auth %}
 {% block extrahead %}
 <link rel="stylesheet"
-      href="//cdn.jsdelivr.net/npm/highlightjs-themes@1.0.0/monokai_sublime.css">
-<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/styles/foundation.min.css">
 {% endblock extrahead %}
 {% block content %}
 
@@ -52,6 +50,8 @@
 {% endblock content %}
 {% comment %} For requesting recommended posts {% endcomment %}
 {% block extrabottom %}
+<script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
 <script>
     const id ='#recommended-posts';
     const data = {slug:'{{post.slug}}', top_n:3};
