--- a/Blog/templates/Blog/post_preview.html
+++ b/Blog/templates/Blog/post_preview.html
@@ -2,9 +2,7 @@
 {% load cool_view %}
 {% block extrahead %}
 <link rel="stylesheet"
-      href="//cdn.jsdelivr.net/npm/highlightjs-themes@1.0.0/monokai_sublime.css">
-<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/styles/foundation.min.css">
 {% endblock extrahead %}
 {% block content %}
 <div id="article-share-container">
@@ -56,3 +54,7 @@
     </div>
 </form>
 {% endblock content %}
+{% block extrabottom %}
+<script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+{% endblock extrabottom %}
