Add RSS feed - add link to footer - add url to the main application - add class to handle view

--- a/Blog/templates/Blog/footer.html
+++ b/Blog/templates/Blog/footer.html
@@ -30,6 +30,7 @@
                 {% endfor %}
                 {% endwith %}
                 <a style="color: white;" class="mr-5" href="https://instagram.com/hackadda" target="_blank"><i class="fa fa-instagram"></i></a>
+                <a style="color: white;" class="mr-5" href="{% url 'rss-feed' %}" target="_blank"><i class="fa fa-rss"></i></a>
             </div>
         </div>
     </div>
