table border made light fixes #139

--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -51,10 +51,13 @@ code {
     padding: 0.25rem;
 }
 
+
 /* handles table on both small and large devices. */
 
 table {
     margin-bottom: 1rem;
+    border-collapse: collapse;
+    border: medium none;
     background-color: transparent;
     width: auto !important;
     /* to override bootstrap property */
