--- a/Blog/templates/Blog/about.html
+++ b/Blog/templates/Blog/about.html
@@ -20,8 +20,8 @@
 
     <p>The <a href="{% url 'Blog:featured-posts' %}" title="Featured">featured</a> section contains the editor's pick for our readers. They can explore <a href="#trending-posts" title="Trending articles">trending</a>, <a href="#latest-posts" title="Latest articles">latest</a> articles.</p>
 
-    <p>There are different <a href="{% url 'Blog:all-categories' %}" title="all categories">categories</a> to explore. There are cheatsheets
-    {% comment %} <a href="{% url 'Blog:tagged' 'cheatsheet' %}" title="cheatsheets">cheatsheets</a>  {% endcomment %}
+    <p>There are different <a href="{% url 'Blog:all-categories' %}" title="all categories">categories</a> to explore. There are
+     <a href="{% url 'Blog:tagged' 'cheatsheet' %}" title="cheatsheets">cheatsheets</a> 
     on various tools, tutorial series for various concepts, advice for following best practices while developing different open source software, web applications, tools, cross-platform software, etc. Each article has a category along with a couple of <a href="{% url 'Blog:all-tags' %}" title="all tags">tags</a>.</p>
 
     <img class="about-page-kids" src="{% static 'Blog/img/kids-in-steam-programs.jpg' %}">
@@ -29,7 +29,7 @@
 
     <p>Readers may also <a href="{% url 'login' %}" title="Login">Log in</a> and bookmark their favorite articles.</p>
 
-    <p>Currently, we have not opened the forum for accepting articles from people outside our team. We would love to broaden our team of hackers. We are working on that front. Till then, in case you are interested, you may apply at <a href="mailto:thehackadda.com@gmail.com">thehackadda@gmail.com</a> with the <strong>Subject: Application the post of writer</strong>.</p>
+    <p>Currently, we have not opened the forum for accepting articles from people outside our team. We would love to broaden our team of hackers. We are working on that front. Till then, in case you are interested, you may apply at <a href="mailto:thehackadda.com@gmail.com">thehackadda@gmail.com</a> with the <strong>Subject: Application for the post of writer</strong>.</p>
 
     <p>We look forward to hearing from you.</p>
 </article>
