Images under both list and card view made clickable, point to the detail-view - function for detail url replaces rather url name along with parameters - Resolves #129

--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -496,7 +496,7 @@ a.article-title:hover {
     height: 200px;
 }
 
-.article-card>.article-thumbnail>img {
+.article-card>.article-thumbnail>a>img {
     /* max-width: 100%; */
     width: 100%;
     height: 100%;
