--- a/Blog/templates/post_card_home.html
+++ b/Blog/templates/post_card_home.html
@@ -2,13 +2,13 @@
 {% load cool_timesince %}
 <div class="article-thumbnail">
 {% if latest_featured == 1 %}
-    <img src="{{post.image.url}}" alt="{{post.title}}" title="{{post.title}}">
+    <a href="{{post.get_detail_url}}" title="{{post.title}}"><img src="{{post.image.url}}" alt="{{post.title}}"></a>
 {% else %}
-    <img src="{{post.thumbnail.url}}" alt="{{post.title}}" title="{{post.title}}">
+    <a href="{{post.get_detail_url}}" title="{{post.title}}"><img src="{{post.thumbnail.url}}" alt="{{post.title}}"></a>
 {% endif %}
 </div>
 <div class="col article-container">
-    <h{{font|default:6}}><a class="article-title" href="{% url 'Blog:post-detail' post.date_published.year post.date_published.month post.date_published.day post.slug %}" title="{{post.title}}">{{ post.title|truncatechars:'80' }}</a></h{{font|default:6}}>
+    <h{{font|default:6}}><a class="article-title" href="{{post.get_detail_url}}" title="{{post.title}}">{{ post.title|truncatechars:'80' }}</a></h{{font|default:6}}>
 </div>
 <div class="article-metadata">
     <small class="text"><a class="mr-1" href="{% url 'Blog:author-posts' post.author.username %}" title="{{post.author.get_full_name|title}}">{{ post.author.get_full_name|title|truncatechars:'30' }}</a></small>
