--- a/Blog/templates/post_list_home.html
+++ b/Blog/templates/post_list_home.html
@@ -4,16 +4,16 @@
 <div class="container-fluid">
     <div class="row media content-section article-list">
         <div class="article-thumbnail col-md-3">
-            <img src={{ post.thumbnail.url }} alt="{{post.title}}" title="{{post.title}}">
+            <a href="{{ post.get_detail_url }}" title="{{ post.title }}"><img src={{ post.thumbnail.url }} alt="{{ post.title }}"></a>
         </div>
         <div class="details col-md-9">
             <div class="media-body article-contents">
                 <div class="article-details">
-                    <h2><a class="article-title" href="{% url 'Blog:post-detail' post.date_published.year post.date_published.month post.date_published.day post.slug %}" title="{{post.title}}">{{ post.title }}</a></h2>
+                    <h2><a class="article-title" href="{{ post.get_detail_url }}" title="{{post.title}}">{{ post.title }}</a></h2>
                     {% comment %} <p class="article-short-des">{{ post.short_des|truncatewords_html:'50'|safe }}</p> {% endcomment %}
                     <div class="article-short-des">
                         {{ post.content|truncatewords_html:'35'|safe }}&nbsp;
-                        <a style="display:inline-block" href="{% url 'Blog:post-detail' post.date_published.year post.date_published.month post.date_published.day post.slug %}" title="Read full article">Read more</a>
+                        <a style="display:inline-block" href="{{ post.get_detail_url }}" title="Read full article">Read more</a>
                     </div>
                     <div class="tags">
                         {% include "tags.html" with tags=post.get_tags_list %}
