Reset background color for pre tag which was overrided by code

--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -824,6 +824,9 @@ a.article-title:hover {
     padding: 0.25rem;
 }
 
+.article-content pre code {
+    background: #eee;
+}
 
 /* handles table on both small and large devices. */
 
