Add link for linkedin and telegram to footer - Reduce margin between the icons for accomodating all in one line on small screens

--- a/Blog/templates/Blog/footer.html
+++ b/Blog/templates/Blog/footer.html
@@ -29,8 +29,10 @@
                 {% endwith %}
                 {% endfor %}
                 {% endwith %}
-                <a style="color: white;" class="mr-5" href="https://instagram.com/hackadda" target="_blank"><i class="fa fa-instagram"></i></a>
-                <a style="color: white;" class="mr-5" href="{% url 'rss-feed' %}" target="_blank"><i class="fa fa-rss"></i></a>
+                <a style="color: white;" class="mr-4" href="https://instagram.com/hackadda" target="_blank"><i class="fa fa-instagram"></i></a>
+                <a style="color: white;" class="mr-4" href="https://t.me/thehackadda" target="_blank"><i class="fa fa-telegram"></i></a>
+                <a style="color: white;" class="mr-4" href="https://linkedin.com/company/hackadda" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a style="color: white;" class="mr-4" href="{% url 'rss-feed' %}" target="_blank"><i class="fa fa-rss"></i></a>
             </div>
         </div>
     </div>
