--- a/Blog/templates/Blog/footer.html
+++ b/Blog/templates/Blog/footer.html
@@ -39,8 +39,7 @@
     <div class="row">
         <div class="col">
             <div class="copyright">
-                <h6><a href="{% url 'privacy-policy' %}" title="Privacy Policy">Privacy Policy</a></h6>
-                <h6>©2020 HackAdda All rights reserved</h6>
+                <h6><a href="{% url 'privacy-policy' %}" title="Privacy Policy">Privacy Policy</a> | ©2020 HackAdda All rights reserved</h6>
             </div>
         </div>
         <div class="col">
