--- a/Blog/templates/Blog/footer.html
+++ b/Blog/templates/Blog/footer.html
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="col">
-            <div class="contact">
+            <div class="contact" id="contact">
                 <a href="mailto:thehackadda.com@gmail.com"><i class="fa fa-envelope"></i>
                     <h6 class="phone">thehackadda@gmail.com</h6>
                 </a>
@@ -39,7 +39,7 @@
     <div class="row">
         <div class="col">
             <div class="copyright">
-                <h6><a href="{% url 'privacy-policy' %}" title="Privacy Policy">Privacy Policy</a> | ©2020 HackAdda All rights reserved</h6>
+                <h6><a href="{% url 'image-license' %}" title="Image License">Image License</a> | <a href="{% url 'privacy-policy' %}" title="Privacy Policy">Privacy Policy</a> | ©2020 HackAdda All rights reserved</h6>
             </div>
         </div>
         <div class="col">
