--- a/Blog/templates/all_tags.html
+++ b/Blog/templates/all_tags.html
@@ -11,16 +11,18 @@
 </div> {% endcomment %}
 <legend class="heading"> All Tags </legend>
 <div class="all-tags">
-    {% for tag, count in tags.items %}
+
+
+    {% for tag in tags %}
     <div class="tag-details m-2">
         <div class="article-tags tag-name truncate-string">
-            <a class="{{tag}}" title="Articles with the tag {{tag}}" href="{% url 'Blog:tagged' tag %}">{{tag}}</a>
+            <a class="{{ tag.name }}" title="Articles with the tag {{ tag.name }}" href="{% url 'Blog:tagged' tag.slug %}">{{ tag.name }}</a>
         </div>
         <div class="tag-count">
-        {% if count == 1 %}
-            <h6>{{ count }} article<h6>
+        {% if tag.count == 1 %}
+            <h6>{{ tag.count }} article<h6>
         {% else %}
-            <h6>{{ count|cool_view }} articles<h6>
+            <h6>{{ tag.count|cool_view }} articles<h6>
         {% endif %}
         </div>
     </div>
