--- a/Blog/templates/Blog/post_form.html
+++ b/Blog/templates/Blog/post_form.html
@@ -1,7 +1,7 @@
 {% extends "Blog/base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-
 <div class="content-section">
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
